--- a/EnquiryIntent/config.yml
+++ b/EnquiryIntent/config.yml
@@ -4,33 +4,25 @@
 language: "en"
 
 pipeline:
+- name: "intent_featurizer_count_vectors"
+- name: "intent_classifier_tensorflow_embedding"
+  batch_size: 64
+  epochs: 1500
 - name: "nlp_spacy"
 - name: "tokenizer_spacy"
 - name: "intent_entity_featurizer_regex"
-- name: "intent_featurizer_spacy"
+#- name: "intent_featurizer_spacy"
 - name: "ner_crf"
 - name: "ner_synonyms"
 - name: "intent_classifier_sklearn"
 # - epochs: 11
 
-# language: "fr"  # your two-letter language code
-
 # pipeline:
-#   - name: "SpacyNLP"
-#   - name: "SpacyTokenizer"
-#   - name: "SpacyFeaturizer"
-#   - name: "RegexFeaturizer"
-#   - name: "LexicalSyntacticFeaturizer"
-#   - name: "CountVectorsFeaturizer"
-#   - name: "CountVectorsFeaturizer"
-#     analyzer: "char_wb"
-#     min_ngram: 1
-#     max_ngram: 4
-#   - name: DIETClassifier
-#     epochs: 100
-#   - name: EntitySynonymMapper
-#   - name: ResponseSelector
-#     epochs: 100
+# - name: "tokenizer_whitespace"
+# - name: "ner_crf"
+# - name: "ner_synonyms"
+# - name: "intent_featurizer_count_vectors"
+# - name: "intent_classifier_tensorflow_embedding"
 
 
 # language: "en"
